# Hive-2

./: .coverage  .dockerignore  .gitignore  .replit  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  Dockerfile  Pasted--Environment-updated-Reloading-shell-Serving-Flask-app-app-Debug-mode-off-WARNING-Thi-1730424037731.txt  README.md  app.py  docker-compose.yml  execute_git_push.py  pyproject.toml  pytest.ini  replit.nix  requirements.txt  test-git-config.txt  test.txt
api/: auth.py  github.py  resources.py  schemas.py
core/: config.py  rbac.py  security.py  version.py
docs/: API.md  SECURITY.md
models/: role.py  token.py  user.py
scripts/: analyze_simpleapi.py  commit_msg_validator.py  download_swagger_ui.py  git_push.py  setup_swagger_ui.py  test_github_analysis.py
services/: github.py  ollama.py
tests/: conftest.py  test_api_resources.py  test_auth_api.py  test_auth_flow.py  test_ollama_connection.py
