[project]
name = "repl-nix-secureapiwizard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-limiter>=3.8.0",
    "marshmallow>=3.23.0",
    "flask-jwt-extended>=4.6.0",
    "flask-restx>=1.3.0",
    "flask-talisman>=1.1.0",
    "flask-cors>=5.0.0",
    "flask-migrate",
    "python-dotenv",
    "selenium>=4.26.1",
    "webdriver-manager>=4.0.2",
]
