[tool.poetry]
name = "secure-rest-api"
version = "2.0.0"
description = "A secure REST API with JWT authentication, Swagger documentation, and PostgreSQL integration"
authors = ["Replit Agent <agent@example.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.5.3"
flask-restx = "^1.1.0"
flask-cors = "^4.0.0"
flask-talisman = "^1.1.0"
flask-limiter = "^3.5.0"
marshmallow = "^3.20.1"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.1"
requests = "^2.31.0"
pygithub = "^2.1.1"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python main.py"
test = "pytest"
